footer alignment issue fixed

--- a/src/Components/Footer/styles.css
+++ b/src/Components/Footer/styles.css
@@ -2,7 +2,7 @@
 }
 
 .footer-container {
-  background-color: rgb(7, 19, 48, 0.9);
+  background-color: rgba(7, 19, 48, 0.9);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -24,8 +24,9 @@
   color: rgba(255, 255, 255, 0.5);
 }
 .social-link-image:hover {
-  color: rgba(255, 255, 255);
+  color: rgb(255, 255, 255);
 }
 .copyright-message {
-  color: rgba(255, 255, 255);
+  color: rgb(255, 255, 255);
+  text-align: center;
 }
